# ocitool

./: .gitignore  Cargo.toml  Cross.toml  README.md  build_proto.rs  oci.json
.github/workflows/: build.yaml
src/: access.rs  archive.rs  cleanup.rs  client.rs  digest.rs  downloader.rs  execution.rs  macros.rs  main.rs  parser.rs  platform.rs  runner.rs  system_login.rs  test.rs  uploader.rs  walk.rs  whiteout.rs
src/compose/: docker_compose_finder.rs  lease.rs  mod.rs  pull.rs
src/compose/containerd/: client.rs
src/compose/containerd/proto/: codec.rs  containerd.events.rs  containerd.services.containers.v1.rs  containerd.services.content.v1.rs  containerd.services.diff.v1.rs  containerd.services.events.v1.rs  containerd.services.images.v1.rs  containerd.services.introspection.v1.rs  containerd.services.leases.v1.rs  containerd.services.namespaces.v1.rs  containerd.services.sandbox.v1.rs  containerd.services.snapshots.v1.rs  containerd.services.streaming.v1.rs  containerd.services.tasks.v1.rs  containerd.services.transfer.v1.rs  containerd.services.version.v1.rs  containerd.types.transfer.rs
src/compose/pull/: containerd_utils.rs  mod.rs
src/compose/types/: compose.rs
src/compose/up/: mod.rs  nerdctl_utils.rs
src/spec/: config.rs  enums.rs  index.rs  manifest.rs  mod.rs  plan.rs
