[package]
name = "ocitool"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
time = { version = "0", features = ["serde", "formatting", "parsing"] }
serde_json = "1"
walkdir = "2"
regex-lite = "0"
tar = "0"
zstd = { version = "0", default-features = false, features = ["zstdmt"] }
tokio = { version = "1", features = ["sync", "net", "rt", "rt-multi-thread", "macros"], default-features = false }
reqwest = { version = "0", features = ["json", "rustls-tls", "hickory-dns", "stream"], default-features = false }
sha256 = "1"
clap = { version = "4", features = ["derive"] }
base64 = "0"
cjson = "0"
num_cpus = "1"

[profile.release-lto]
inherits = "release"
lto = true
strip = true
panic = "abort"


[profile.release-strip]
inherits = "release"
lto = false
strip = true
panic = "abort"

