[package]
name = "ocitool"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
time = { version = "0", features = ["serde", "formatting", "parsing"] }
serde_json = "1"
serde_yaml_ng = "0"
walkdir = "2"
regex-lite = "0"
tar = "0"
zstd = { version = "0", default-features = false, features = ["zstdmt"] }
tokio = { version = "1", features = ["sync", "net", "rt", "rt-multi-thread", "macros", "process"], default-features = false }
reqwest = { version = "0", features = ["json", "rustls-tls", "hickory-dns", "stream"], default-features = false }
sha256 = "1"
base64 = "0"
cjson = "0"
num_cpus = "1"
xflags = "0"
flate2 = { version = "1", features = ["zlib-rs"], default-features = false }
tempfile = "3"
dirs = "6"
which = "8"
humansize = "2"
futures = "0"
derive_builder = "0"
indexmap = { version = "2", features = ["std", "serde"] }
containerd-client = { git = "https://github.com/containerd/rust-extensions" }

[profile.release-lto]
inherits = "release"
lto = true
strip = true
panic = "abort"
codegen-units = 1